sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: ')' expected but ';' found.
				echange(i;i+1); a=a+1
                                         ^AlgCocktailSort1:9: error: ';' expected but ')' found.
				echange(i;i+1); a=a+1
                                             ^AlgCocktailSort1:11: error: ')' expected but '}' found.
		}
                ^AlgCocktailSort1:14: error: ')' expected but ';' found.
				echange(i;i+1);a=a1
                                         ^AlgCocktailSort1:14: error: ';' expected but ')' found.
				echange(i;i+1);a=a1
                                             ^AlgCocktailSort1:16: error: ')' expected but '}' found.
		}
                ^